cicd-demo deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  annotations:
 #   deployment.kubernetes.io/revision: "1"
 # creationTimestamp: "2023-09-04T09:27:50Z"
#  generation: 1
  labels:
    app: cicd-demo
  name: cicd-demo
  namespace: default
 # resourceVersion: "30517"
 # uid: 24adc682-4a8c-42f4-92cb-8a21ef344296
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cicd-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cicd-demo
    spec:
      containers:
      - name: cicd-demo
        image: docker.io/tobimason/cicd-demo:latest
        imagePullPolicy: Always
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
