cicd-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cicd-demo
  name: cicd-demo
spec:
  type: ClusterIP
  ports:
  - name: "cicd-demo"
    port: 80
    targetPort: 8080
#    nodePort: 31000
  selector:
    app: cicd-demo
