container-demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: container-demo-app
  name: container-demo-app
spec:
  type: ClusterIP
  ports:
  - name: "container-demo-app"
    port: 80
    targetPort: 8080
#    nodePort: 31000
  selector:
    app: container-demo-app
