cicd-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: cicd-demo
    meta.helm.sh/release-namespace: default
#  labels:
#    app.kubernetes.io/component: server
#    app.kubernetes.io/instance: argo-cd
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/name: argo-cd
#    helm.sh/chart: argo-cd-4.7.21
  name: cicd-demo-traefik
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: cicd-demo.rd.localhost
    http:
      paths:
      - backend:
          service:
            name: cicd-demo
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
#  tls:
#  - hosts:
#    - vote.rd.localhost
#    secretName: argo-cd.rd.localhost-tls
