container-demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: container-demo-app
    meta.helm.sh/release-namespace: default
  name: container-demo-app-traefik
spec:
  ingressClassName: traefik
  rules:
  - host: container-demo-app.rd.localhost
    http:
      paths:
      - backend:
          service:
            name: container-demo-app
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
